hphp/hack/test/typecheck/null/option_subtype_null.php.exp
File "option_subtype_null.php", line 8, characters 22-25:
Unbound name: null (an object type) (Naming[2049])
